Level 2 : Hero section Added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Inter:wght@400;500&family=Poppins:wght@500;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Russo+One&family=Inter:wght@400;500&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
 
 </head>
@@ -30,8 +31,38 @@
         </div>
     </nav>
 
+    <main>
+       <!-- HERO SECTION -->
+<section class="hero" id="home">
+    <div class="hero-grid container">
 
+        <!-- LEFT SIDE -->
+        <div class="hero-left">
+            <p class="hello">Hi, </p>
+            <!-- <h1 class="hero-title typing" id="typing">I am a Frontend Developer</h1> -->
+<h1>I am a <span id="typing"></span></h1>
+            <p class="lead">
+                I build responsive and modern web experiences using HTML, CSS, and JavaScript.
+            </p>
 
+            <div class="hero-buttons">
+                <a href="assets/resume.pdf" class="btn-primary">Download Resume</a>
+                <a href="#projects" class="btn-outline">View Projects</a>
+            </div>
+        </div>
+
+        <!-- RIGHT SIDE (IMAGE) -->
+         <div class="hero-right">
+             
+             <div class="avatar">
+                 <img src="assets/profile.png" alt="Amit Profile">
+             </div>
+         </div>
+
+    </div>
+</section>
+
+    </main>
 
 
 
