css and some html code in hero section updated

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
         <!-- LEFT SIDE -->
         <div class="hero-left">
-            <p class="hello">Hi, </p>
-            <!-- <h1 class="hero-title typing" id="typing">I am a Frontend Developer</h1> -->
+            <h2>Hi, I am <span>Amit</span></h2>
 <h1>I am a <span id="typing"></span></h1>
             <p class="lead">
                 I build responsive and modern web experiences using HTML, CSS, and JavaScript.
