Level 3 : about section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- LEFT SIDE -->
         <div class="hero-left">
-            <h2>Hi, I am <span>Amit</span></h2>
+            <h2>Hi,</h2>
 <h1>I am a <span id="typing"></span></h1>
             <p class="lead">
                 I build responsive and modern web experiences using HTML, CSS, and JavaScript.
@@ -60,6 +60,20 @@
 
     </div>
 </section>
+
+    </main>
+
+    <main>
+    <section id="about" class="about">
+    <div class="about-container">
+        <h2>About Me</h2>
+        <p>
+            I build modern, responsive frontends with clean UI and smooth interactions using HTML, CSS, and JavaScript.
+            I'm a fast learner and enjoy turning ideas into functional, visually appealing web experiences.
+        </p>
+    </div>
+</section>
+
 
     </main>
 
