Level 4 : Add Project Section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,15 @@
 
 
     </main>
+    <!-- PROJECTS -->
+    
+    <main>
+        <section id="projects" class="projects">
+            <h2>Projects</h2>
+            <div class="projects-grid" id="projectsGrid">
+            </div>
+        </section>
+    </main>
 
 
 
