Level 5 : Footer added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Russo+One&family=Inter:wght@400;500&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" 
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 
 </head>
 
@@ -32,52 +35,53 @@
     </nav>
 
     <main>
-       <!-- HERO SECTION -->
-<section class="hero" id="home">
-    <div class="hero-grid container">
+        <!-- HERO SECTION -->
+        <section class="hero" id="home">
+            <div class="hero-grid container">
 
-        <!-- LEFT SIDE -->
-        <div class="hero-left">
-            <h2>Hi,</h2>
-<h1>I am a <span id="typing"></span></h1>
-            <p class="lead">
-                I build responsive and modern web experiences using HTML, CSS, and JavaScript.
-            </p>
+                <!-- LEFT SIDE -->
+                <div class="hero-left">
+                    <h2>Hi,</h2>
+                    <h1>I am a <span id="typing"></span></h1>
+                    <p class="lead">
+                        I build responsive and modern web experiences using HTML, CSS, and JavaScript.
+                    </p>
 
-            <div class="hero-buttons">
-                <a href="assets/resume.pdf" class="btn-primary">Download Resume</a>
-                <a href="#projects" class="btn-outline">View Projects</a>
+                    <div class="hero-buttons">
+                        <a href="assets/resume.pdf" class="btn-primary">Download Resume</a>
+                        <a href="#projects" class="btn-outline">View Projects</a>
+                    </div>
+                </div>
+
+                <!-- RIGHT SIDE (IMAGE) -->
+                <div class="hero-right">
+
+                    <div class="avatar">
+                        <img src="assets/profile.png" alt="Amit Profile">
+                    </div>
+                </div>
+
             </div>
-        </div>
-
-        <!-- RIGHT SIDE (IMAGE) -->
-         <div class="hero-right">
-             
-             <div class="avatar">
-                 <img src="assets/profile.png" alt="Amit Profile">
-             </div>
-         </div>
-
-    </div>
-</section>
+        </section>
 
     </main>
 
     <main>
-    <section id="about" class="about">
-    <div class="about-container">
-        <h2>About Me</h2>
-        <p>
-            I build modern, responsive frontends with clean UI and smooth interactions using HTML, CSS, and JavaScript.
-            I'm a fast learner and enjoy turning ideas into functional, visually appealing web experiences.
-        </p>
-    </div>
-</section>
+        <section id="about" class="about">
+            <div class="about-container">
+                <h2>About Me</h2>
+                <p>
+                    I build modern, responsive frontends with clean UI and smooth interactions using HTML, CSS, and
+                    JavaScript.
+                    I'm a fast learner and enjoy turning ideas into functional, visually appealing web experiences.
+                </p>
+            </div>
+        </section>
 
 
     </main>
     <!-- PROJECTS -->
-    
+
     <main>
         <section id="projects" class="projects">
             <h2>Projects</h2>
@@ -85,6 +89,101 @@
             </div>
         </section>
     </main>
+
+    <!-- SKILLS -->
+    <section id="skills">
+        <h2>Skills</h2>
+
+        <div class="skills-grid">
+
+            <!-- ROW 1 -->
+            <div class="skill-row">
+                <p class="skill-name">HTML</p>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 90%;"></div>
+                </div>
+                <p class="skill-percent">90%</p>
+            </div>
+
+            <!-- ROW 2 -->
+            <div class="skill-row">
+                <p class="skill-name">CSS</p>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 85%;"></div>
+                </div>
+                <p class="skill-percent">85%</p>
+            </div>
+
+            <!-- ROW 3 -->
+            <div class="skill-row">
+                <p class="skill-name">JavaScript</p>
+                <div class="skill-bar">
+                    <div class="skill-fill" style="width: 80%;"></div>
+                </div>
+                <p class="skill-percent">80%</p>
+            </div>
+
+        </div>
+    </section>
+
+
+
+    <!-- CERTIFICATIONS -->
+    <main>
+        <section id="certifications" class="certifications">
+            <h2>Certifications</h2>
+
+            <div class="cert-grid">
+                <div class="cert-card">
+                    <h3>Frontend Development</h3>
+                    <p>Issued by Coursera</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>JavaScript Mastery</h3>
+                    <p>Issued by Udemy</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Web Design Essentials</h3>
+                    <p>Issued by Google</p>
+                </div>
+            </div>
+        </section>
+    </main>
+  <footer class="footer">
+    <div class="footer-container">
+
+        <div class="footer-brand">
+            <div class="footer-logo">A</div>
+            <h3>Amit.dev</h3>
+        </div>
+
+        <!-- CONTACT ICONS -->
+        <div class="contact-icons">
+
+            <!-- WhatsApp -->
+            <a href="https://wa.me/919284162963" target="_blank" class="contact-icon">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+
+            <!-- Email -->
+            <a href="mailto:amitwaghmare1211@gmail.com" class="contact-icon">
+                <i class="fas fa-envelope"></i>
+            </a>
+
+            <!-- Phone (Optional: if you want) -->
+            <a href="tel:+919284162963" class="contact-icon">
+                <i class="fas fa-phone"></i>
+            </a>
+
+        </div>
+
+        <p class="footer-copy">© 2025 Amit Waghmare — Frontend Developer</p>
+    </div>
+</footer>
+
+
 
 
 
