--- a/index.html
+++ b/index.html
@@ -135,18 +135,43 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 
             <div class="cert-grid">
                 <div class="cert-card">
-                    <h3>Frontend Development</h3>
+                    <h3>User Experience</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Website Creation</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Agile Scrum in Practice</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>HTML 5</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>CSS 3</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>JavaScript</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Web Development in React.js: Development Basics</h3>
                     <p>Issued by Coursera</p>
                 </div>
 
                 <div class="cert-card">
-                    <h3>JavaScript Mastery</h3>
-                    <p>Issued by Udemy</p>
-                </div>
-
-                <div class="cert-card">
-                    <h3>Web Design Essentials</h3>
-                    <p>Issued by Google</p>
+                    <h3>Frontend for Java Full Stack Development</h3>
+                    <p>Issued by Coursera</p>
                 </div>
             </div>
         </section>
