Some certification section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
                     </p>
 
                     <div class="hero-buttons">
-                        <a href="assets/resume.pdf" class="btn-primary">Download Resume</a>
+                        <a href="assets/Resume.pdf" class="btn-primary">Download Resume</a>
                         <a href="#projects" class="btn-outline">View Projects</a>
                     </div>
                 </div>
@@ -140,7 +140,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
                 </div>
 
                 <div class="cert-card">
-                    <h3>Website Creation</h3>
+                    <h3>Website Creation </h3>
                     <p>Issued by Infosys</p>
                 </div>
 
@@ -156,6 +156,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 
                 <div class="cert-card">
                     <h3>CSS 3</h3>
+                    <p>Issued by Infosys</p>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Twitter Bootstrap</h3>
                     <p>Issued by Infosys</p>
                 </div>
 
