--- a/index.html
+++ b/index.html
@@ -1,224 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Russo+One&family=Inter:wght@400;500&family=Poppins:wght@500;700&display=swap"
-        rel="stylesheet">
-        <link rel="stylesheet" 
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+      href="https://fonts.googleapis.com/css2?family=Russo+One&family=Inter:wght@400;500&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+  </head>
 
-
-</head>
-
-<body>
+  <body>
     <!-- NAV -->
     <nav>
-        <div class="nav-inner container">
-            <div class="brand">
-                <div class="logo">A</div>
-                <div class="title">Amit.dev</div>
-            </div>
-            <div class="nav-links">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#skills">Skills</a>
-                <a href="#certifications">Certifications</a>
-                <button class="theme-btn" id="themeToggle">Light</button>
-            </div>
+      <div class="nav-inner container">
+        <div class="brand">
+          <div class="logo">A</div>
+          <div class="title">Amit.dev</div>
         </div>
+        <div class="nav-links">
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#projects">Projects</a>
+          <a href="#skills">Skills</a>
+          <a href="#certifications">Certifications</a>
+          <button class="theme-btn" id="themeToggle">Light</button>
+        </div>
+      </div>
     </nav>
 
     <main>
-        <!-- HERO SECTION -->
-        <section class="hero" id="home">
-            <div class="hero-grid container">
+      <!-- HERO SECTION -->
+      <section class="hero" id="home">
+        <div class="hero-grid container">
+          <!-- LEFT SIDE -->
+          <div class="hero-left">
+            <h2>Hi,</h2>
+            <h1>I am a <span id="typing"></span></h1>
+            <p class="lead">
+              I build responsive and modern web experiences using HTML, CSS, and
+              JavaScript.
+            </p>
 
-                <!-- LEFT SIDE -->
-                <div class="hero-left">
-                    <h2>Hi,</h2>
-                    <h1>I am a <span id="typing"></span></h1>
-                    <p class="lead">
-                        I build responsive and modern web experiences using HTML, CSS, and JavaScript.
-                    </p>
-
-                    <div class="hero-buttons">
-                        <a href="assets/Resume.pdf" class="btn-primary">Download Resume</a>
-                        <a href="#projects" class="btn-outline">View Projects</a>
-                    </div>
-                </div>
-
-                <!-- RIGHT SIDE (IMAGE) -->
-                <div class="hero-right">
-
-                    <div class="avatar">
-                        <img src="assets/profile.png" alt="Amit Profile">
-                    </div>
-                </div>
-
+            <div class="hero-buttons">
+              <a href="assets/Resume.pdf" class="btn-primary"
+                >Download Resume</a
+              >
+              <a href="#projects" class="btn-outline">View Projects</a>
             </div>
-        </section>
+          </div>
 
+          <!-- RIGHT SIDE (IMAGE) -->
+          <div class="hero-right">
+            <div class="avatar">
+              <img src="assets/profile.png" alt="Amit Profile" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <main>
-        <section id="about" class="about">
-            <div class="about-container">
-                <h2>About Me</h2>
-                <p>
-                    I build modern, responsive frontends with clean UI and smooth interactions using HTML, CSS, and
-                    JavaScript.
-                    I'm a fast learner and enjoy turning ideas into functional, visually appealing web experiences.
-                </p>
-            </div>
-        </section>
-
-
+      <section id="about" class="about">
+        <div class="about-container">
+          <h2>About Me</h2>
+          <p>
+            I build modern, responsive frontends with clean UI and smooth
+            interactions using HTML, CSS, and JavaScript. I'm a fast learner and
+            enjoy turning ideas into functional, visually appealing web
+            experiences.
+          </p>
+        </div>
+      </section>
     </main>
     <!-- PROJECTS -->
 
     <main>
-        <section id="projects" class="projects">
-            <h2>Projects</h2>
-            <div class="projects-grid" id="projectsGrid">
-            </div>
-        </section>
+      <section id="projects" class="projects">
+        <h2>Projects</h2>
+        <div class="projects-grid" id="projectsGrid"></div>
+      </section>
     </main>
 
     <!-- SKILLS -->
     <section id="skills">
-        <h2>Skills</h2>
+      <h2>Skills</h2>
 
-        <div class="skills-grid">
-
-            <!-- ROW 1 -->
-            <div class="skill-row">
-                <p class="skill-name">HTML</p>
-                <div class="skill-bar">
-                    <div class="skill-fill" style="width: 90%;"></div>
-                </div>
-                <p class="skill-percent">90%</p>
-            </div>
-
-            <!-- ROW 2 -->
-            <div class="skill-row">
-                <p class="skill-name">CSS</p>
-                <div class="skill-bar">
-                    <div class="skill-fill" style="width: 85%;"></div>
-                </div>
-                <p class="skill-percent">85%</p>
-            </div>
-
-            <!-- ROW 3 -->
-            <div class="skill-row">
-                <p class="skill-name">JavaScript</p>
-                <div class="skill-bar">
-                    <div class="skill-fill" style="width: 80%;"></div>
-                </div>
-                <p class="skill-percent">80%</p>
-            </div>
-
+      <div class="skills-grid">
+        <!-- ROW 1 -->
+        <div class="skill-row">
+          <p class="skill-name">HTML</p>
+          <div class="skill-bar">
+            <div class="skill-fill" style="width: 90%"></div>
+          </div>
+          <p class="skill-percent">90%</p>
         </div>
+
+        <!-- ROW 2 -->
+        <div class="skill-row">
+          <p class="skill-name">CSS</p>
+          <div class="skill-bar">
+            <div class="skill-fill" style="width: 85%"></div>
+          </div>
+          <p class="skill-percent">85%</p>
+        </div>
+
+        <!-- ROW 3 -->
+        <div class="skill-row">
+          <p class="skill-name">JavaScript</p>
+          <div class="skill-bar">
+            <div class="skill-fill" style="width: 80%"></div>
+          </div>
+          <p class="skill-percent">80%</p>
+        </div>
+      </div>
     </section>
-
-
 
     <!-- CERTIFICATIONS -->
     <main>
-        <section id="certifications" class="certifications">
-            <h2>Certifications</h2>
+      <section id="certifications" class="certifications">
+        <h2>Certifications</h2>
 
-            <div class="cert-grid">
-                <div class="cert-card">
-                    <h3>User Experience</h3>
-                    <p>Issued by Infosys</p>
-                </div>
+        <div class="cert-grid">
+          <div class="cert-card">
+            <h3>User Experience</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>Website Creation </h3>
-                    <p>Issued by Infosys</p>
-                </div>
+          <div class="cert-card">
+            <h3>Website Creation</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>Agile Scrum in Practice</h3>
-                    <p>Issued by Infosys</p>
-                </div>
+          <div class="cert-card">
+            <h3>Agile Scrum in Practice</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>HTML 5</h3>
-                    <p>Issued by Infosys</p>
-                </div>
+          <div class="cert-card">
+            <h3>HTML 5</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>CSS 3</h3>
-                    <p>Issued by Infosys</p>
-                </div>
+          <div class="cert-card">
+            <h3>CSS 3</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>Twitter Bootstrap</h3>
-                    <p>Issued by Infosys</p>
-                </div>
+          <div class="cert-card">
+            <h3>Twitter Bootstrap</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>JavaScript</h3>
-                    <p>Issued by Infosys</p>
-                </div>
+          <div class="cert-card">
+            <h3>JavaScript</h3>
+            <p>Issued by Infosys</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>Web Development in React.js: Development Basics</h3>
-                    <p>Issued by Coursera</p>
-                </div>
+          <div class="cert-card">
+            <h3>Web Development in React.js: Development Basics</h3>
+            <p>Issued by Coursera</p>
+          </div>
 
-                <div class="cert-card">
-                    <h3>Frontend for Java Full Stack Development</h3>
-                    <p>Issued by Coursera</p>
-                </div>
-            </div>
-        </section>
+          <div class="cert-card">
+            <h3>Frontend for Java Full Stack Development</h3>
+            <p>Issued by Coursera</p>
+          </div>
+        </div>
+      </section>
     </main>
-  <footer class="footer">
-    <div class="footer-container">
-
+    <footer class="footer">
+      <div class="footer-container">
         <div class="footer-brand">
-            <div class="footer-logo">A</div>
-            <h3>Amit.dev</h3>
+          <div class="footer-logo">A</div>
+          <h3>Amit.dev</h3>
         </div>
 
         <!-- CONTACT ICONS -->
         <div class="contact-icons">
+          <!-- WhatsApp -->
+          <a
+            href="https://wa.me/919284162963"
+            target="_blank"
+            class="contact-icon"
+          >
+            <i class="fab fa-whatsapp"></i>
+          </a>
 
-            <!-- WhatsApp -->
-            <a href="https://wa.me/919284162963" target="_blank" class="contact-icon">
-                <i class="fab fa-whatsapp"></i>
-            </a>
+          <!-- Email -->
+          <a href="mailto:amitwaghmare1211@gmail.com" class="contact-icon">
+            <i class="fas fa-envelope"></i>
+          </a>
 
-            <!-- Email -->
-            <a href="mailto:amitwaghmare1211@gmail.com" class="contact-icon">
-                <i class="fas fa-envelope"></i>
-            </a>
-
-            <!-- Phone (Optional: if you want) -->
-            <a href="tel:+919284162963" class="contact-icon">
-                <i class="fas fa-phone"></i>
-            </a>
-
+          <!-- Phone (Optional: if you want) -->
+          <a href="tel:+919284162963" class="contact-icon">
+            <i class="fas fa-phone"></i>
+          </a>
         </div>
 
         <p class="footer-copy">© 2025 Amit Waghmare — Frontend Developer</p>
-    </div>
-</footer>
-
-
-
-
-
+      </div>
+    </footer>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
